Bug 236229 - dead letters not recovered on restart
Summary: dead letters not recovered on restart
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-03 21:43 UTC by Mark van Rossum
Modified: 2010-07-30 12:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark van Rossum 2010-05-03 21:43:04 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    Fedora RPMs

kmail has crashed, and is restarted.
It should then recover the mails you were composing.
It does not anymore, but reports:

kontact(4206) KMKernel::recoverDeadLetters: Unable to open autosave file "1272883665.2755.3gxBs" 

The reported file is there, in 
~/.kde/share/apps/kmail/autosave/cur

Worked fine on older versions.

(Does it look in the right location?)
Comment 1 m.eik michalke 2010-05-10 01:58:15 UTC
i can confirm this bug (kubuntu 10.04, KDE 4.4.2, kmail 1.13.2). there's actually several messages in autosave, but none get's reopened:

m@yrla ~ $ ls -l .kde/share/apps/kmail/autosave/cur/
insgesamt 176
-rw------- 1 m m  2607 2010-05-01 22:19 1255623371.27952.f3RJ5
-rw------- 1 m m 10758 2010-05-01 22:19 1258884226.3131.H7aix
-rw------- 1 m m  2096 2010-05-01 22:19 1263730972.3416.N4eNp
-rw------- 1 m m  1917 2010-05-01 22:19 1263811710.3521.FpwtV
-rw------- 1 m m  5309 2010-05-01 22:19 1269533585.8882.46XHP
-rw------- 1 m m  3086 2010-05-01 22:19 1270456351.16710.lC5gb
-rw------- 1 m m  3175 2010-05-01 22:19 1272486500.12535.cSlpu
-rw------- 1 m m  8187 2010-05-01 22:19 1272486504.12535.Cc7Tv
-rw------- 1 m m  3145 2010-05-03 03:56 1272832689.25603.XVGLl
-rw------- 1 m m  2829 2010-05-07 22:27 1273227623.7783.TbQ9U
-rw------- 1 m m  1847 2010-05-09 03:55 1273338995.12419.jwkPi
-rw------- 1 m m  1368 2010-05-10 00:37 1273433711.26161.52jgD
-rw------- 1 m m  4619 2010-05-10 00:35 1273442876.26161.gdYmX

i've noticed that the file .kde/share/apps/kmail/autosave.index.ids was last modified at 2010-05-01 18:49. i renamed it and restarted kmail, no new index file is generated. so i guess there's a problem with creating/updating that index?
Comment 2 Minh Ha Duong 2010-05-14 11:34:25 UTC
I confirm the bug.
Context: Kubuntu 10.04, kontact 4.4.2. Mail directory relocated from default.
Symptom: Kontact complains that the messages in the maildir don't get opened.

Set permissions to 777: does not solve.
Delete the out of date autosave.index.ids: does not solve.

Move the autosaved messages to the inbox/cur : Worked around the bug. No more complaints about dead letter un-recovery. The inbox index is recognized as out of date and properly rebuild. Then I can safely delete the messages.
Comment 3 Mark van Rossum 2010-05-14 11:59:21 UTC
After removing  ~/.kde/share/apps/kmail/autosave completely, kmail does rebuild 
the directory, but without index, and still unable to open the messages.
Comment 4 Mark van Rossum 2010-05-29 15:04:06 UTC
Still there in 
kmail 1.13.3 
KDE 4.4.80  (4.5 beta1)
Comment 5 Mark van Rossum 2010-05-31 21:23:32 UTC
Here is a temporary workaround that works for me:

Create a new folder in kmail (called lost+found in my case)
 
rmdir ~/Mail/lost+found/cur
ln -sf ~/.kde/share/apps/kmail/autosave/cur  ~/Mail/lost+found/cur

rebuild the index (right click on folder in Kmail, properties -> maintainance)
Comment 6 Minh Ha Duong 2010-06-01 12:09:50 UTC
Hi Mark,
Thanks for sharing. May I remind everybody that "lost+found", as a directory name, is already used by some popular Linux filesystems to store recovered inodes ?
Minh
Comment 7 Thomas McGuire 2010-07-30 12:04:37 UTC
SVN commit 1157138 by tmcguire:

Fix regression that autosave files were not restored.

BUG: 236229


 M  +1 -1      kmkernel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1157138