Fix regression that autosave files were not restored.

BUG: 236229

svn path=/branches/KDE/4.4/kdepim/; revision=1157138